--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -13,26 +13,26 @@ dynamic_padding = true
 opacity = 0.85
 
 [font]
-size = 9.0
+size = 26.0
 
 [font.bold]
-#family = "ProggyCleanSZ Nerd Font Mono"
-family = "MesloLGS Nerd Font Mono"
+family = "ProggyCleanSZ Nerd Font Mono"
+#family = "MesloLGS Nerd Font Mono"
 style = "Bold"
 
 [font.bold_italic]
-#family = "ProggyCleanSZ Nerd Font Mono"
-family = "MesloLGS Nerd Font Mono"
+family = "ProggyCleanSZ Nerd Font Mono"
+#family = "MesloLGS Nerd Font Mono"
 style = "Bold Italic"
 
 [font.italic]
-#family = "ProggyCleanSZ Nerd Font Mono"
-family = "MesloLGS Nerd Font Mono"
+family = "ProggyCleanSZ Nerd Font Mono"
+#family = "MesloLGS Nerd Font Mono"
 style = "Regular Italic"
 
 
 [font.normal]
-#family = "ProggyCleanSZ Nerd Font Mono"
-family = "MesloLGS Nerd Font Mono"
+family = "ProggyCleanSZ Nerd Font Mono"
+#family = "MesloLGS Nerd Font Mono"
 style = "Regular"
 
