--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -97,5 +97,5 @@ blur-background-exclude = [
 #################################
 
 vsync = true;
-backend = "glx";
+backend = "xrender";
 use-damage = false;
